<resources>
    <string name="app_name">Expense Manager</string>
    <string name="amount">Amount</string>
    <string name="amount_to_settle">Amount to Settle:</string>
    <string name="hello_world">Hello world!</string>
    <string name="username">Username</string>
    <string name="preffered_name">Screen Name</string>
    <string name="url">http://172.20.0.222:8081/ExpenseServer/api/expenseService</string>
    <string name="password">Password</string>
    <string name="conf_password">Confirm Password</string>
    <string name="new_user"><u>New user? Register here!!</u></string>
    <string name="or">or</string>
    <string name="back_to_login"><u>Back to login.</u></string>
    <string name="login">Login</string>
    <string name="register">Register</string>
    <string name="action_settings">Settings</string>
    <string name="expense_manager">EXPENSE MANAGER</string>
    <string name="title_activity_expense">Expenses</string>
    <string name="ok">OK</string>
    <string name="yes">Yes</string>
    <string name="upgrade">Upgrade!!</string>
    <string name="no_trips">No expense-groups(EGs) available!! Please click on the + symbol to add an EG.</string>
    <string name="action_add_trip">Add EG</string>
    <string name="add_trip_name">Type EG name</string>
    <string name="add_screen_name">Type Screen name</string>
    <string name="trip_name">EG name</string>
    <string name="your_name">Screen name:</string>
    <string name="mob_no">Mobile No</string>
    <string name="country_code">+91</string>
    <string name="verification_info">Please enter a valid mobile number and
        click on verify to send an sms with a verification token. Enter the token below to proceed.</string>
    <string name="verification_token">Verification Token</string>
    <string name="verify">Verify</string>
    <string name="token">Token</string>
    <string name="plus">+</string>
    <string name="exit">Exit</string>
    <string name="next">Continue</string>
    <string name="screen_name">Enter a screen name. This is used by other people in your groups to identify you. Its not mandatorily unique.</string>
    <string name="add">Add</string>
    <string name="update">Update</string>
    <string name="cancel">Cancel</string>
    <string name="no_expense">No expense added for this expense-group(EG)!! Please click on the + symbol to add an expense.</string>
    <string name="add_expense_name">Type expense name</string>
    <string name="add_expense_detail">Type expense detail</string>
    <string name="add_expense_amount">Type expense amount</string>
    <string name="select_user">Select a user</string>
    <string name="action_add_expense">Add Expense</string>
    <string name="action_exit_eg">Exit EG</string>
    <string name="action_delete_trips">Delete EGs</string>
    <string name="action_delete_trip">Delete EG</string>
    <string name="action_add_people">Add People</string>
    <string name="no_people">Nobody has been added for this expense-group(EG)!! Please click on the + symbol to add someone.</string>
    <string name="no_updates">No unread updates.</string>
    <string name="scan_qr">Please scan the QR code from the other users device to add this expense-group</string>
    <string name="title_activity_tab">TabActivity</string>
    <string name="action_scan_qr">Scan QR code</string>
    <string name="action_upgrade">Upgrade to pro!</string>
    <string name="action_add_new">Add new</string>
    <string name="delete_trip_info">You can only delete trips which are either closed. If the selection includes trips which are not closed, those will not be deleted.</string>
    <string name="expenses">Expenses</string>
    <string name="no_expenses">No expense added for this expense-group!!</string>
    <string name="distribution">Expense Distribution</string>
    <string name="expense_name">Expense Name</string>
    <string name="expense_detail">Expense Detail</string>
    <string name="group_detail">Group Detail</string>
    <string name="spent_amount">Spent Amount</string>
    <string name="expense_admin">Spent by</string>
    <string name="expense_creation_date">Created On</string>
    <string name="action_save_expense">Save Expense</string>
    <string name="action_delete_expense">Delete Expense</string>
    <string name="trips">Expense-Groups</string>
    <string name="people">People</string>
    <string name="add_expense">Add Expense</string>
    <string name="add_people">Add People</string>
    <string name="chart_size">200</string>
    <string name="qr_code_size">200</string>
    <string name="updates">Update Center</string>
    <string name="unit_id">ca-app-pub-3626039642054183/1450564550</string>
    <string name="select">Select:</string>
    <string name="all">All</string>
    <string name="none">None</string>
    <string name="settled">Settled</string>
    <string name="settle_expenses">Settle</string>
    <string name="unsettled">Unsettled</string>
    <string name="upgrade_features">If you upgrade to premium you will have the following features:\n 1. No ads!\n 2. Add unlimited EGs!\n 3. Add unlimited number of people to your EGs!\n 4. Access across all your devices.</string>
    <string name="setup">Just a Sec&#8230;</string>
    <string name="done">Almost Done&#8230;</string>
    <string-array name="country_codes">
        <item>+93</item>
        <item>+355</item>
        <item>+213</item>
        <item>+376</item>
        <item>+244</item>
        <item>+672</item>
        <item>+54</item>
        <item>+374</item>
        <item>+297</item>
        <item>+61</item>
        <item>+43</item>
        <item>+994</item>
        <item>+973</item>
        <item>+880</item>
        <item>+375</item>
        <item>+32</item>
        <item>+501</item>
        <item>+229</item>
        <item>+975</item>
        <item>+591</item>
        <item>+387</item>
        <item>+267</item>
        <item>+55</item>
        <item>+673</item>
        <item>+359</item>
        <item>+226</item>
        <item>+95</item>
        <item>+257</item>
        <item>+855</item>
        <item>+237</item>
        <item>+1</item>
        <item>+238</item>
        <item>+236</item>
        <item>+235</item>
        <item>+56</item>
        <item>+86</item>
        <item>+61</item>
        <item>+61</item>
        <item>+57</item>
        <item>+269</item>
        <item>+242</item>
        <item>+243</item>
        <item>+682</item>
        <item>+506</item>
        <item>+385</item>
        <item>+53</item>
        <item>+357</item>
        <item>+420</item>
        <item>+45</item>
        <item>+253</item>
        <item>+670</item>
        <item>+593</item>
        <item>+20</item>
        <item>+503</item>
        <item>+240</item>
        <item>+291</item>
        <item>+372</item>
        <item>+251</item>
        <item>+500</item>
        <item>+298</item>
        <item>+679</item>
        <item>+358</item>
        <item>+33</item>
        <item>+689</item>
        <item>+241</item>
        <item>+220</item>
        <item>+995</item>
        <item>+49</item>
        <item>+233</item>
        <item>+350</item>
        <item>+30</item>
        <item>+299</item>
        <item>+502</item>
        <item>+224</item>
        <item>+245</item>
        <item>+592</item>
        <item>+509</item>
        <item>+504</item>
        <item>+852</item>
        <item>+36</item>
        <item>+91</item>
        <item>+62</item>
        <item>+98</item>
        <item>+964</item>
        <item>+353</item>
        <item>+44</item>
        <item>+972</item>
        <item>+39</item>
        <item>+225</item>
        <item>+81</item>
        <item>+962</item>
        <item>+7</item>
        <item>+254</item>
        <item>+686</item>
        <item>+965</item>
        <item>+996</item>
        <item>+856</item>
        <item>+371</item>
        <item>+961</item>
        <item>+266</item>
        <item>+231</item>
        <item>+218</item>
        <item>+423</item>
        <item>+370</item>
        <item>+352</item>
        <item>+853</item>
        <item>+389</item>
        <item>+261</item>
        <item>+265</item>
        <item>+60</item>
        <item>+960</item>
        <item>+223</item>
        <item>+356</item>
        <item>+692</item>
        <item>+222</item>
        <item>+230</item>
        <item>+262</item>
        <item>+52</item>
        <item>+691</item>
        <item>+373</item>
        <item>+377</item>
        <item>+976</item>
        <item>+382</item>
        <item>+212</item>
        <item>+258</item>
        <item>+264</item>
        <item>+674</item>
        <item>+977</item>
        <item>+31</item>
        <item>+599</item>
        <item>+687</item>
        <item>+64</item>
        <item>+505</item>
        <item>+227</item>
        <item>+234</item>
        <item>+683</item>
        <item>+850</item>
        <item>+47</item>
        <item>+968</item>
        <item>+92</item>
        <item>+680</item>
        <item>+507</item>
        <item>+675</item>
        <item>+595</item>
        <item>+51</item>
        <item>+63</item>
        <item>+870</item>
        <item>+48</item>
        <item>+351</item>
        <item>+1</item>
        <item>+974</item>
        <item>+40</item>
        <item>+7</item>
        <item>+250</item>
        <item>+590</item>
        <item>+685</item>
        <item>+378</item>
        <item>+239</item>
        <item>+966</item>
        <item>+221</item>
        <item>+381</item>
        <item>+248</item>
        <item>+232</item>
        <item>+65</item>
        <item>+421</item>
        <item>+386</item>
        <item>+677</item>
        <item>+252</item>
        <item>+27</item>
        <item>+82</item>
        <item>+34</item>
        <item>+94</item>
        <item>+290</item>
        <item>+508</item>
        <item>+249</item>
        <item>+597</item>
        <item>+268</item>
        <item>+46</item>
        <item>+41</item>
        <item>+963</item>
        <item>+886</item>
        <item>+992</item>
        <item>+255</item>
        <item>+66</item>
        <item>+228</item>
        <item>+690</item>
        <item>+676</item>
        <item>+216</item>
        <item>+90</item>
        <item>+993</item>
        <item>+688</item>
        <item>+971</item>
        <item>+256</item>
        <item>+44</item>
        <item>+380</item>
        <item>+598</item>
        <item>+1</item>
        <item>+998</item>
        <item>+678</item>
        <item>+39</item>
        <item>+58</item>
        <item>+84</item>
        <item>+681</item>
        <item>+967</item>
        <item>+260</item>
        <item>+263</item>
    </string-array>
</resources>