<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:custom="http://schemas.android.com/apk/res-auto"
    android:id="@+id/toolbar_start"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <com.trip.expensemanager.views.LineAnimatedView
        android:id="@+id/anim_line"
        android:layout_width="match_parent"
        android:layout_height="5dp"
        android:visibility="invisible"
        custom:color1="@android:color/black"
        custom:color2="@android:color/white"
        custom:color3="@android:color/black" />

    <ScrollView
        android:id="@+id/sc"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="5dp"
        android:padding="10dp"
        android:layout_above="@+id/footer">

        <RelativeLayout
            android:id="@+id/rl"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/txt_mob_no"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:text="@string/mob_no"
                android:textSize="15sp" />

            <LinearLayout
                android:id="@+id/ll"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/txt_mob_no"
                android:layout_marginTop="5dp"
                android:gravity="center_vertical"
                android:orientation="horizontal"
                android:weightSum="16">

                <AutoCompleteTextView
                    android:id="@+id/etxt_country"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="5dp"
                    android:layout_marginStart="5dp"
                    android:layout_weight="2"
                    android:completionThreshold="1"
                    android:hint="@string/country_code"
                    android:inputType="phone"
                    android:textColor="@drawable/disable_color"
                    android:textSize="15sp"/>

                <EditText
                    android:id="@+id/etxt_mob_no"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="5dp"
                    android:layout_marginLeft="5dp"
                    android:layout_marginRight="5dp"
                    android:layout_marginStart="5dp"
                    android:layout_weight="11"
                    android:hint="@string/mob_no"
                    android:inputType="phone"
                    android:textColor="@drawable/disable_color"
                    android:textSize="15sp"/>

                <Button
                    android:id="@+id/btn_verify"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="5dp"
                    android:layout_marginRight="5dp"
                    android:layout_weight="3"
                    android:background="@drawable/custom_button_settled"
                    android:text="Verify"
                    android:textSize="15sp"/>

            </LinearLayout>

            <TextView
                android:id="@+id/txt_info"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/ll"
                android:layout_marginTop="10dp"
                android:text="@string/verification_info"
                android:textSize="15sp"/>

            <TextView
                android:id="@+id/txt_token"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/txt_info"
                android:layout_marginTop="10dp"
                android:text="@string/verification_token"
                android:textSize="15sp"/>

            <EditText
                android:id="@+id/etxt_token"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/txt_token"
                android:layout_marginTop="5dp"
                android:ems="10"
                android:hint="@string/token"
                android:inputType="number"
                android:textColor="@drawable/disable_color"
                android:textSize="15sp"/>

            <TextView
                android:id="@+id/txt_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/etxt_token"
                android:layout_marginTop="10dp"
                android:text="@string/screen_name"
                android:textSize="15sp"/>

            <EditText
                android:id="@+id/etxt_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/txt_name"
                android:layout_marginTop="5dp"
                android:ems="10"
                android:hint="@string/preffered_name"
                android:inputType="textCapWords"
                android:textColor="@drawable/disable_color"
                android:textSize="15sp"/>

        </RelativeLayout>
    </ScrollView>

    <RelativeLayout
        android:id="@+id/footer"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:background="@color/app_color">

        <LinearLayout
            android:id="@+id/ll_exit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:orientation="horizontal"
            android:padding="10dp">

            <ImageView
                android:id="@+id/iv_back"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:contentDescription="@string/app_name"
                android:src="@drawable/ic_back" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:text="@string/exit"
                android:textColor="@android:color/white" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/ll_next"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:orientation="horizontal"
            android:padding="10dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:text="@string/next"
                android:textColor="@android:color/white" />

            <ImageView
                android:id="@+id/iv_front"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:contentDescription="@string/app_name"
                android:src="@drawable/ic_front" />
        </LinearLayout>
    </RelativeLayout>

</RelativeLayout>