<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/rl"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_margin="10dp"
    android:background="@android:color/white"
    android:padding="20dp">

    <TextView
        android:id="@+id/tv_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/upgrade"
        android:textColor="@android:color/black"
        android:textSize="15sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/tv_message"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/tv_title"
        android:textColor="@android:color/black"
        android:textSize="15sp" />

    <RelativeLayout
        android:id="@+id/Footer"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/tv_message"
        android:layout_marginTop="15dp">

        <Button
            android:id="@+id/btn_first"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_toLeftOf="@+id/btn_second"
            android:layout_toStartOf="@+id/btn_second"
            android:background="@drawable/lollipop_button"
            android:text="@string/upgrade"
            android:textColor="@drawable/btn_text_selector" />

        <Button
            android:id="@+id/btn_second"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:background="@drawable/lollipop_button"
            android:text="@string/next"
            android:textColor="@drawable/btn_text_selector" />

        <Button
            android:id="@+id/btn_third"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:background="@drawable/lollipop_button"
            android:text="@string/exit"
            android:textColor="@drawable/btn_text_selector" />
    </RelativeLayout>

</RelativeLayout>